fixed text colour on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@ $nav-pills-border-radius: 10px;
 $nav-link-hover-color: rgb(201, 201, 201);
 $nav-link-padding-x: 1.25rem;
 $nav-link-padding-y: 0.5rem;
+$dropdown-link-color: rgb(0,0,0);
 
 @import "~/bootstrap/scss/functions";
 @import "~/bootstrap/scss/variables";
